# opentelemetry-azure-monitor-python

./: .coveragerc  .flake8  .isort.cfg  .pylintrc  .travis.yml  CHANGELOG.md  README.md  README.rst  docs-requirements.txt  eachdist.ini  tox.ini
azure_monitor/: CHANGELOG.md  README.md  README.rst  setup.cfg  setup.py
azure_monitor/examples/: auto_collector.py  client.py  request.py  requests.py  server.py  trace.py
azure_monitor/examples/metrics/: auto_collector.py  client.py  observer.py  simple.py  standard.py
azure_monitor/examples/traces/: README.md  client.py  request.py  server.py  trace.py
azure_monitor/src/azure_monitor/: __init__.py  exporter.py  metrics.py  options.py  protocol.py  storage.py  trace.py  util.py  utils.py  version.py
azure_monitor/src/azure_monitor/auto_collection/: __init__.py  dependency_metrics.py  http_dependency_metrics.py  http_request_metrics.py  performance_metrics.py  request_metrics.py
azure_monitor/src/azure_monitor/export/: __init__.py
azure_monitor/src/azure_monitor/export/metrics/: __init__.py
azure_monitor/src/azure_monitor/export/trace/: __init__.py
azure_monitor/src/azure_monitor/sdk/: __init__.py
azure_monitor/src/azure_monitor/sdk/auto_collection/: __init__.py  dependency_metrics.py  metrics_span_processor.py  performance_metrics.py  request_metrics.py  utils.py
azure_monitor/src/azure_monitor/sdk/auto_collection/live_metrics/: __init__.py  dependency_metrics.py  exporter.py  manager.py  performance_metrics.py  request_metrics.py  sender.py  (+1 more)
azure_monitor/tests/: test_base_exporter.py  test_options.py  test_protocol.py  test_storage.py  test_utils.py
azure_monitor/tests/auto_collection/: test_auto_collection.py  test_depencency_metrics.py  test_dependency_metrics.py  test_metrics_span_processor.py  test_performance_metrics.py  test_request_metrics.py
azure_monitor/tests/auto_collection/live_metrics/: test_dependency_metrics.py  test_exporter.py  test_live_metrics_auto_collection.py  test_manager.py  test_performance_metrics.py  test_request_metrics.py  test_sender.py
azure_monitor/tests/metrics/: test_metrics.py
azure_monitor/tests/trace/: test_trace.py
(+12 files in other folders)
