# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT License.
[metadata]
name = opentelemetry-azure-monitor
description = Azure Monitor SDKs and Exporters for OpenTelemetry
long_description = file: README.md
long_description_content_type = text/markdown
author = Microsoft
author_email = appinsightssdk@microsoft.com
url = https://github.com/microsoft/opentelemetry-azure-monitor-python
platforms = any
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python_requires = >=3.4
package_dir=
    =src
packages=find_namespace:
install_requires =
    opentelemetry-api >= 0.5b0
    opentelemetry-sdk >= 0.5b0
    psutil >= 5.6.3
    requests ~= 2.0

[options.packages.find]
where = src
